<resources>
    <string name="app_name">compass</string>
    <string name="location_error_msg">Location not found</string>
    <string name="heading">Heading : %1$f</string>
    <string name="true_heading">True heading : %1$f</string>
    <string name="magnetic_declination">Declination : %1$f</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="magnetometer">Magnetometer</string>
    <string name="gyroscope">GyroScope</string>
    <string name="ax">Ax : %1$f</string>
    <string name="ay">Ay : %1$f</string>
    <string name="az">Az : %1$f</string>
    <string name="gx">Gx : %1$f</string>
    <string name="gy">Gy : %1$f</string>
    <string name="gz">Gz : %1$f</string>
    <string name="mx">Mx : %1$f</string>
    <string name="my">My : %1$f</string>
    <string name="mz">Mz : %1$f</string>
    <string name="sensor_accuracy">Accuracy</string>
    <string name="activity_recognition">Activity Recog.</string>
    <string name="activity_in_vehicle">In Vehicle</string>
    <string name="activity_on_bicycle">On Bicycle</string>
    <string name="activity_on_foot">On Foot</string>
    <string name="activity_running">Running</string>
    <string name="activity_still">Still</string>
    <string name="activity_tilting">Tilting</string>
    <string name="activity_walking">walking</string>
    <string name="activity_unknown">Unknown</string>
    <string name="activity_recog_permission_deneid">Activity recog. permission denied</string>
    <string name="location_permission_deneid">Location Permission Denied</string>
    <string name="accelerometer_accuracy">Accel : %1$s</string>
    <string name="magnetometer_accuracy">Magneto : %1$s</string>
    <string name="gyroscope_accuracy">Gyro : %1$s</string>
    <string name="altitude">Altitude : %1$f</string>
    <string name="latitude">Latitude : %1$f</string>
    <string name="longitude">Longitude : %1$f</string>
    <string name="speed">Speed : %1$f</string>
    <string name="accuracy">Accuracy : %1$f</string>
    <string name="time">Time : %1$s</string>
    <string name="storage_permission_deneid">Storage permission denied</string>
    <string name="channel_name">My Custom channel</string>
    <string name="channel_description">My channel\'s description</string>
    <string name="start_recording">Start recording</string>
    <string name="stop_service">Stop recording</string>
    <string name="share_logs">Share logs</string>
</resources>